// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationDate shows date range validation 1`] = `
<div>
  <div
    class="ddm__validation-date-accepted-date"
  >
    <label>
      accepted-date
    </label>
    <select
      class="form-control"
      name="selectedValidation"
    >
      <option
        name="futureDates"
        parametermessage=""
        template="futureDates({name}, \\"{parameter}\\")"
        value="futureDates"
      >
        Future Dates
      </option>
      <option
        name="pastDates"
        parametermessage=""
        template="pastDates({name}, \\"{parameter}\\")"
        value="pastDates"
      >
        Past Dates
      </option>
      <option
        name="dateRange"
        parametermessage=""
        template="dateRange({name}, \\"{parameter}\\")"
        value="dateRange"
      >
        Range
      </option>
    </select>
  </div>
  <label>
    START-DATE
  </label>
  <div
    class="separator"
  />
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        starts-from
      </label>
      <div
        data-tooltip-align="top"
        title="starts-from-tooltip"
      >
        <svg
          class="lexicon-icon lexicon-icon-question-circle-full ddm__validation-date-start-end-icon"
          role="presentation"
        >
          <use
            xlink:href="#question-circle-full"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            custom-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        date
      </label>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            response-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm-custom-date"
  >
    <label>
      operation
      <select
        class="form-control"
        name="selectedOperation_startsFrom"
      >
        <option
          value="plus"
        >
          plus
        </option>
        <option
          value="minus"
        >
          minus
        </option>
      </select>
    </label>
    <label>
      quantity
      <input
        class="form-control ddm-field-text"
        max="999"
        min="1"
        name="inputedQuantity_startsFrom"
        type="number"
        value="1"
      />
    </label>
    <label>
      unit
      <select
        class="form-control"
        name="selectedUnit_startsFrom"
      >
        <option
          value="days"
        >
          days
        </option>
        <option
          value="months"
        >
          months
        </option>
        <option
          value="years"
        >
          years
        </option>
      </select>
    </label>
  </div>
  <label>
    END-DATE
  </label>
  <div
    class="separator"
  />
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        ends-on
      </label>
      <div
        data-tooltip-align="top"
        title="ends-on-tooltip"
      >
        <svg
          class="lexicon-icon lexicon-icon-question-circle-full ddm__validation-date-start-end-icon"
          role="presentation"
        >
          <use
            xlink:href="#question-circle-full"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            custom-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        date
      </label>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            response-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm-custom-date"
  >
    <label>
      operation
      <select
        class="form-control"
        name="selectedOperation_endsOn"
      >
        <option
          value="plus"
        >
          plus
        </option>
        <option
          value="minus"
        >
          minus
        </option>
      </select>
    </label>
    <label>
      quantity
      <input
        class="form-control ddm-field-text"
        max="999"
        min="1"
        name="inputedQuantity_endsOn"
        type="number"
        value="1"
      />
    </label>
    <label>
      unit
      <select
        class="form-control"
        name="selectedUnit_endsOn"
      >
        <option
          value="days"
        >
          days
        </option>
        <option
          value="months"
        >
          months
        </option>
        <option
          value="years"
        >
          years
        </option>
      </select>
    </label>
  </div>
  <label
    for="validationDate_errorMessage"
  >
    error-message
  </label>
  <input
    class="form-control"
    id="validationDate_errorMessage"
    name="validationDate_errorMessage"
    placeholder="this-field-is-invalid"
    type="text"
    value="[object Object]"
  />
</div>
`;

exports[`ValidationDate shows future dates validation 1`] = `
<div>
  <div
    class="ddm__validation-date-accepted-date"
  >
    <label>
      accepted-date
    </label>
    <select
      class="form-control"
      name="selectedValidation"
    >
      <option
        name="futureDates"
        parametermessage=""
        template="futureDates({name}, \\"{parameter}\\")"
        value="futureDates"
      >
        Future Dates
      </option>
      <option
        name="pastDates"
        parametermessage=""
        template="pastDates({name}, \\"{parameter}\\")"
        value="pastDates"
      >
        Past Dates
      </option>
      <option
        name="dateRange"
        parametermessage=""
        template="dateRange({name}, \\"{parameter}\\")"
        value="dateRange"
      >
        Range
      </option>
    </select>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        starts-from
      </label>
      <div
        data-tooltip-align="top"
        title="starts-from-tooltip"
      >
        <svg
          class="lexicon-icon lexicon-icon-question-circle-full ddm__validation-date-start-end-icon"
          role="presentation"
        >
          <use
            xlink:href="#question-circle-full"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            custom-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        date
      </label>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            response-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm-custom-date"
  >
    <label>
      operation
      <select
        class="form-control"
        name="selectedOperation_startsFrom"
      >
        <option
          value="plus"
        >
          plus
        </option>
        <option
          value="minus"
        >
          minus
        </option>
      </select>
    </label>
    <label>
      quantity
      <input
        class="form-control ddm-field-text"
        max="999"
        min="1"
        name="inputedQuantity_startsFrom"
        type="number"
        value="1"
      />
    </label>
    <label>
      unit
      <select
        class="form-control"
        name="selectedUnit_startsFrom"
      >
        <option
          value="days"
        >
          days
        </option>
        <option
          value="months"
        >
          months
        </option>
        <option
          value="years"
        >
          years
        </option>
      </select>
    </label>
  </div>
  <label
    for="validationDate_errorMessage"
  >
    error-message
  </label>
  <input
    class="form-control"
    id="validationDate_errorMessage"
    name="validationDate_errorMessage"
    placeholder="this-field-is-invalid"
    type="text"
    value="[object Object]"
  />
</div>
`;

exports[`ValidationDate shows past dates validation 1`] = `
<div>
  <div
    class="ddm__validation-date-accepted-date"
  >
    <label>
      accepted-date
    </label>
    <select
      class="form-control"
      name="selectedValidation"
    >
      <option
        name="futureDates"
        parametermessage=""
        template="futureDates({name}, \\"{parameter}\\")"
        value="futureDates"
      >
        Future Dates
      </option>
      <option
        name="pastDates"
        parametermessage=""
        template="pastDates({name}, \\"{parameter}\\")"
        value="pastDates"
      >
        Past Dates
      </option>
      <option
        name="dateRange"
        parametermessage=""
        template="dateRange({name}, \\"{parameter}\\")"
        value="dateRange"
      >
        Range
      </option>
    </select>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        ends-on
      </label>
      <div
        data-tooltip-align="top"
        title="ends-on-tooltip"
      >
        <svg
          class="lexicon-icon lexicon-icon-question-circle-full ddm__validation-date-start-end-icon"
          role="presentation"
        >
          <use
            xlink:href="#question-circle-full"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            custom-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm__validation-date-start-end"
  >
    <div
      class="ddm__validation-date-start-end-label"
    >
      <label>
        date
      </label>
    </div>
    <div
      class="dropdown"
    >
      <div
        class="dropdown-toggle form-builder-select-field input-group-container"
        style=""
      >
        <div
          class="form-control results-chosen select-field-trigger"
        >
          <div
            class="option-selected"
          >
            response-date
          </div>
          <a
            class="select-arrow-down-container"
          >
            <svg
              class="lexicon-icon lexicon-icon-caret-double"
              role="presentation"
            >
              <use
                xlink:href="#caret-double"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ddm-custom-date"
  >
    <label>
      operation
      <select
        class="form-control"
        name="selectedOperation_endsOn"
      >
        <option
          value="plus"
        >
          plus
        </option>
        <option
          value="minus"
        >
          minus
        </option>
      </select>
    </label>
    <label>
      quantity
      <input
        class="form-control ddm-field-text"
        max="999"
        min="1"
        name="inputedQuantity_endsOn"
        type="number"
        value="1"
      />
    </label>
    <label>
      unit
      <select
        class="form-control"
        name="selectedUnit_endsOn"
      >
        <option
          value="days"
        >
          days
        </option>
        <option
          value="months"
        >
          months
        </option>
        <option
          value="years"
        >
          years
        </option>
      </select>
    </label>
  </div>
  <label
    for="validationDate_errorMessage"
  >
    error-message
  </label>
  <input
    class="form-control"
    id="validationDate_errorMessage"
    name="validationDate_errorMessage"
    placeholder="this-field-is-invalid"
    type="text"
    value="[object Object]"
  />
</div>
`;
